Fix spacing on home page discover section

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -116,8 +116,18 @@ body {
     min-height: 190px;
   }
   h1 {
-    padding-top: 20px;
+    padding-top: 0;
     color: $honeycomb;
+    text-shadow: rgb(255, 255, 255) 1px 1px 1px;
+  }
+  h3 {
+    text-align: center;
+    color: $honeycomb;
+    text-shadow: rgb(255, 255, 255) 1px 1px 1px;
+
+  }
+  li {
+    text-align: center;
   }
   p {
     text-align: center;
@@ -128,11 +138,6 @@ body {
 
 #story2 {
   background-color: $honeycomb;
-  /* background: linear-gradient(
-  rgba(255, 197, 44, 0.25),
-  rgba(255, 197, 44, 0.25)
-  ),
-  url("https://s3.amazonaws.com/gatsbee/honey_im_subtle_%402X.png"); */
   #calendar-icon {
     color: $red;
     display: inline-block;
